@@ -6,6 +6,7 @@
 - Display no options in radio form_ui when no option is available, so column can be refreshed with update_columns
 - Add as_main_div_data to override data attributes on main div
 - Add loading indicator to embedded scaffolds, display error if fails
+- Fix race condition in threadsafe mode with delayed setup
 
 = 3.6.0.pre
 - Added threadsafety as tech preview, enabled with ActiveScaffold.threadsafe! in initializer.
